<?php die(); ?>
Akeeba Panopticon 1.3.3
================================================================================
+ Links to the Connection Troubleshooting wiki page
~ PHP 8.5 compatibility
# [HIGH] Manually enqueueing a WordPress plugin update in the UI does not schedule the plugins update task for the site.

Akeeba Panopticon 1.3.2
================================================================================
+ Tips to connect Akeeba Backup Professional for WordPress to Panopticon
~ More verbose logging when enqueueing emails.
~ Improve adding WordPress sites

Akeeba Panopticon 1.3.1
================================================================================
+ Better worded messages when you have Akeeba Backup Core instead of Professional
~ Make accurate PHP CLI path detection optional
# [HIGH] CRON jobs didn't work correctly in the Docker image [gh-856]
# [HIGH] Cannot set up update preferences for Joomla! extensions whose name does nor conform to Joomla's standards (even though Joomla allows them to be installed, because it fails to enforce its own naming standards!)
# [MEDIUM] Site Information doesn't show extension errors
# [MEDIUM] PHP error trying to log in with a username that doesn't exist
# [LOW] Logs and Tasks views: warning if there's a log/task belonging to a deleted site
# [LOW] If an extension's short name starts with the character `a`, that letter is cut off

Akeeba Panopticon 1.3.0
================================================================================
+ Domain registration and expiration warnings
+ Force MFA for specific user groups, superusers, or administrators [gh-723]
+ Option to treat MFA failures as login failures [gh-723]
+ Enforce a maximum number of MFA attempts [gh-723]
+ Accurate PHP CLI path in the CRON job setup page
+ Improve update installation [gh-803]
# [HIGH] Cannot connect to really old WordPress installations (WordPress 5.5 and earlier)